--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.4",
     "native-base": "^2.13.8",
+    "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-image-picker": "^2.0.0",
     "react-native-reanimated": "^1.4.0",
